// Copyright 2015 The gRPC Authors
// protoc -I . --go_out=plugins=grpc:. ./ds.proto

// protoc -I ./ --go_out=. ./dataService/ds.proto
// protoc -I ./ --go-grpc_out=. dataService/ds.proto

syntax = "proto3";

package dataService;

import "api.proto";

option go_package = "./dataservice;dataservice";
option java_package = "com.github.airiot.sdk.client.dubbo.grpc.datasource";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;
option java_generic_services = true;

service DataService {
  rpc Proxy (Request) returns (api.Response) {}
}

message Request {
  string key = 1;
  bytes data = 2;
}

